--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@civic/auth": "^0.8.0",
+    "@civic/auth": "^0.8.2",
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.50.0",
+    "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "child_process": "^1.0.2",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.522.0",
     "mongodb": "^6.17.0",
     "net": "^1.0.2",
-    "next": "15.2.8",
+    "next": "^15.2.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/node": "24.0.3",
-    "@types/react": "19.1.8",
+    "@types/next": "^8.0.7",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.9.3"
   }
 }
