--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3"
