--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "lucide-react": "^0.522.0",
     "mongodb": "^6.17.0",
     "net": "^1.0.2",
-    "next": "^15.2.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/next": "^8.0.7",
+    "@types/next": "15.2.8",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "eslint": "^8",
     "eslint-config-next": "^16.1.1",
+    "next": "^15.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3"
