--- a/package.json
+++ b/package.json
@@ -26,14 +26,10 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@types/next": "15.2.8",
-    "@types/node": "^24.0.3",
-    "@types/react": "^19.1.8",
     "eslint": "^8",
-    "eslint-config-next": "^16.1.1",
     "next": "^15.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.9.3"
+    "typescript": "5.9.3"
   }
 }
