--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "three": "^0.182.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
