--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "three": "^0.182.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1"
   },
   "devDependencies": {
     "eslint": "^8",
